# CoaCoA

./: .gitignore  CHANGELOG.md  MIGRATION.md  README.md  junit.xml  pyproject.toml
.github/workflows/: ci.yml
src/coacoa/: __init__.py  __main__.py  coacoa.yaml  config.py
src/coacoa/scaffold/: coacoa.yaml
src/coacoa/scaffold/agents/: analyst.md  architect.md  code_explorer.md  dev.md  orchestrator.md  pm.md  po.md  qa.md  scrum_master.md  ux_designer.md
src/coacoa/scaffold/data/: language_rules.md  tech_preferences.md
src/coacoa/scaffold/data/pattern_library/authentication/: jwt_patterns.md
src/coacoa/scaffold/data/pattern_library/database/: repository_patterns.md
src/coacoa/scaffold/data/pattern_library/error_handling/: result_patterns.md
src/coacoa/scaffold/examples/: task_progression_example.md
src/coacoa/scaffold/ide_helpers/: .clinerules  claude.md
src/coacoa/scaffold/ide_helpers/.clinerules/: coacoa_commands.md  rules.md
src/coacoa/scaffold/quality/: anti_hallucination.md  build_integrity.md  code_quality_gate.md  link_integrity.md  performance_gate.md  security_gate.md  unified_analysis_validation.md
src/coacoa/scaffold/schemas/: artifact_schemas.json
src/coacoa/scaffold/tasks/: analyze_codebase.md  generate_prd.md  generate_stories.md  manage_story_branch.md  parse_dependencies.md  write_adr.md
src/coacoa/scaffold/templates/: analysis_plan_template.md  codebase_analysis_master.md  error_handling.md  model_adaptation.md  progress_tracker.md
src/coacoa/scaffold/workflows/: default_brownfield.yaml  default_greenfield.yaml
tests/: test_cli.py  test_config.py
(+17 files in other folders)
